[package]
name = "p2p-sync"
version = "0.1.0"
edition = "2021"
authors = ["osamusic"]
license = "AGPL-3.0-or-later"

[[bin]]
name = "p2p-sync"
path = "src/main.rs"

[lib]
name = "p2p_sync"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
libp2p = { version = "0.54", features = ["tcp", "mdns", "noise", "yamux", "gossipsub", "kad", "identify", "macros", "tokio", "quic"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
anyhow = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bincode = "1.3"
sha2 = "0.10"
notify = "6.1"
toml = "0.8"
config = "0.14"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser", "processthreadsapi"] }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"